--- a/简说Linux/相关参考资料.md
+++ b/简说Linux/相关参考资料.md
@@ -1,7 +1,50 @@
-# 相关参考资料
+# Linux内核学习文档资料、相关工具
 
-1) [简说Linux视频](https://www.bilibili.com/video/BV1tk4y1m7LC/?spm_id_from=pageDriver&vd_source=2699f104de8828a576fed54818f8cd79)
 
-2) [深入浅出Linux内核源码和调试（学习路线）](https://www.bilibili.com/read/cv27006601/?spm_id_from=333.999.0.0)
+## 资料参考
 
-3) [Linux环境相关工具](https://github.com/0voice/linux_environment_tools)
+- [简说Linux视频](https://www.bilibili.com/video/BV1tk4y1m7LC/?spm_id_from=pageDriver&vd_source=2699f104de8828a576fed54818f8cd79)
+
+- [深入浅出Linux内核源码和调试（学习路线）](https://www.bilibili.com/read/cv27006601/?spm_id_from=333.999.0.0)
+
+- [简说Linux图文专栏](https://space.bilibili.com/646178510/article)
+
+- [Linux环境相关工具](https://github.com/0voice/linux_environment_tools)
+
+
+## 国内Linux镜像下载
+
+- ### ubuntu镜像下载
+
+   - 官方下载地址：https://www.ubuntu.com/download
+   
+   - 中科大源: http://mirrors.ustc.edu.cn/ubuntu-releases/
+
+   - 南京大学: http://mirrors.nju.edu.cn/ubuntu-releases/
+
+   - 上海交通大学: http://ftp.sjtu.edu.cn/ubuntu-releases/
+
+   - 清华大学: https://mirror.tuna.tsinghua.edu.cn/ubuntu-releases/
+
+   - 阿里云开源镜像站: http://mirrors.aliyun.com/ubuntu-releases/
+
+   - 浙江大学: http://mirrors.zju.edu.cn/ubuntu-releases/
+
+   - 不知名镜像网站: http://mirror.pnl.gov/releases/
+
+   - 各个版本下载网址: http://mirrors.melbourne.co.uk/ubuntu-releases/
+
+## Linux内核源代码下载
+
+- 内核官网: https://www.kernel.org/
+
+- 早期版本: https://cdn.kernel.org/pub/linux/kernel/Historic/
+
+
+
+## Linux patch的提交及使用
+- [提交补丁：如何让你的改动进入内核](https://www.kernel.org/doc/html/v6.1/translations/zh_CN/process/submitting-patches.html)
+
+- [Linux内核补丁与patch/diff使用详解](https://blog.csdn.net/pashanhu6402/article/details/51849354)
+
+- [Linux内核打补丁和制作补丁](https://www.cnblogs.com/bizhenLiu-cnblogs/p/14368459.html)
