--- a/简说Linux/相关参考资料.md
+++ b/简说Linux/相关参考资料.md
@@ -41,6 +41,31 @@
 - 早期版本: https://cdn.kernel.org/pub/linux/kernel/Historic/
 
 
+## Ubuntu22.04 安装openssh-server
+>ps: 参考https://blog.csdn.net/DT_FlagshipStore/article/details/126051811
+
+- 安装openssh-server
+<pre>
+# apt install openssh-server
+</pre>
+
+- 修改配置
+<pre>
+PermitRootLogin yes
+PasswordAuthentication yes
+
+HostKeyAlgorithms=+ssh-rsa,ssh-dss
+KexAlgorithms=+diffie-hellman-group-exchange-sha1,diffie-hellman-group14-sha1,diffie-hellman-group1-sha1
+</pre>
+
+- 重启openssh服务
+<pre>
+# service sshd restart
+</pre> 
+
+
+
+
 
 ## Linux patch的提交及使用
 - [提交补丁：如何让你的改动进入内核](https://www.kernel.org/doc/html/v6.1/translations/zh_CN/process/submitting-patches.html)
