--- a/简说Linux/相关参考资料.md
+++ b/简说Linux/相关参考资料.md
@@ -49,7 +49,7 @@
 # apt install openssh-server
 </pre>
 
-- 修改配置
+- 修改配置/etc/ssh/sshd_config
 <pre>
 PermitRootLogin yes
 PasswordAuthentication yes
