--- a/简说Linux/相关参考资料.md
+++ b/简说Linux/相关参考资料.md
@@ -49,11 +49,12 @@
 # apt install openssh-server
 </pre>
 
-- 修改配置/etc/ssh/sshd_config
+- 修改配置: /etc/ssh/sshd_config
 <pre>
 PermitRootLogin yes
 PasswordAuthentication yes
 
+# 配置文件底部增加如下
 HostKeyAlgorithms=+ssh-rsa,ssh-dss
 KexAlgorithms=+diffie-hellman-group-exchange-sha1,diffie-hellman-group14-sha1,diffie-hellman-group1-sha1
 </pre>
