--- a/简说Linux/相关参考资料.md
+++ b/简说Linux/相关参考资料.md
@@ -74,3 +74,7 @@ KexAlgorithms=+diffie-hellman-group-exchange-sha1,diffie-hellman-group14-sha1,di
 - [Linux内核补丁与patch/diff使用详解](https://blog.csdn.net/pashanhu6402/article/details/51849354)
 
 - [Linux内核打补丁和制作补丁](https://www.cnblogs.com/bizhenLiu-cnblogs/p/14368459.html)
+
+
+## 其他书籍收集
+- []()
