--- a/相关教程收集.md
+++ b/相关教程收集.md
@@ -16,3 +16,5 @@
 - [linux_kernel_wiki](https://github.com/0voice/linux_kernel_wiki/tree/main)
 
 - [一文汇总 Linux 内核调试的方法](https://zhuanlan.zhihu.com/p/660578616)
+
+- [X86-64 Architecture Guide](http://6.s081.scripts.mit.edu/sp18/x86-64-architecture-guide.html)
