--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -12,5 +12,96 @@
 
 系统调用整体流程如下图所示：
 
+![kernel-download](https://raw.githubusercontent.com/ivanzz1001/linux-kernel-learning/master/%E7%B3%BB%E7%BB%9F%E8%B0%83%E7%94%A8/image/linux-syscall-01.awebp)
 
-linux-syscall-01.awebp
+# 2. 从Hello World说起
+
+我们以一个Hello World程序开始，逐步进入系统调用的学习。下面是用汇编代码写的一个简单的程序：
+
+```assembly
+.section .data
+msg:
+    .ascii "Hello World!\n"
+len = . - msg
+
+.section .text
+.globl  main
+main:
+
+    # ssize_t write(int fd, const void *buf, size_t count)
+    mov $1, %rdi             # fd
+    mov $msg, %rsi           # buf
+    mov $len, %rdx           # count
+    mov $1, %rax             # write(2)系统调用号，64位系统为1
+    syscall
+
+    # exit(status)
+    mov $0, %rdi             # status
+    mov $60, %rax            # exit(2)系统调用号，64位系统为60
+    syscall
+```
+
+编译并运行：
+
+```bash
+# gcc -o helloworld -no-pie helloworld.s 
+# ./helloworld 
+Hello World!
+```
+
+上面这段代码，是直接从我的一篇文章[使用 GNU 汇编语法编写 Hello World 程序](https://juejin.cn/post/7198135791234465847)拷贝过来的。那篇文章里还提到了使用`int 0x80`软中断和`printf`函数实现输出的方法，有兴趣的可以看下。
+
+补充：如下我们对上面的一些代码做简单解释
+
+1. `len = . - msg`
+
+    - `.`: 表示当前地址
+
+    - `msg`: 字符串msg的开始地址
+
+    - `len`: 当前地址减去字符串的开始地址，这就是msg字符串的长度
+
+
+# 3. 系统调用约定
+
+代码虽然正确运行了，但是我们得知道为什么这么写。[x86_64 ABI](https://gitlab.com/x86-psABIs/x86-64-ABI)文档第A.2.1节，描述了调用约定:
+
+```text
+The Linux AMD64 kernel uses internally the same calling conventions as user-level 
+applications (see section 3.2.3 for details). User-level applications that like to 
+call system calls should use the functions from the C library. The interface between 
+the C library and the Linux kernel is the same as for the user-level applications 
+with the following differences:
+
+  1. User-level applications use as integer registers for passing the sequence %rdi,
+     %rsi, %rdx, %rcx, %r8 and %r9. The kernel interface uses %rdi, %rsi, %rdx, %r10, 
+     %r8 and %r9.
+
+  2. A system-call is done via the syscall instruction. The kernel clobbers registers
+     %rcx and %r11 but preserves all other registers except %rax.
+
+  3. The number of the syscall has to be passed in register %rax
+
+  4. System-calls are limited to six arguments, no argument is passed directly on the 
+    stack.
+
+  5. Returning from the syscall, register %rax contains the result of the 
+     system-call. A value in the range between -4095 and -1 indicates an error, 
+     it is -errno.
+
+  6. Only values of class INTEGER or class MEMORY are passed to the kernel.
+```
+
+可以看出，系统调用约定了以下几个方面：
+
+- 参数相关
+
+- 系统调用号
+
+- 系统调用指令
+
+- 返回值及错误码
+
+## 3.1 系统调用的入参
+
+### 3.1.1 参数顺序
