--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -105,3 +105,13 @@ with the following differences:
 ## 3.1 系统调用的入参
 
 ### 3.1.1 参数顺序
+
+当使用 syscall进行系统调用时，参数与寄存器的对应关系如下图所示：
+
+```text
+参数1     参数2     参数3     参数4     参数5     参数6
+--------------------------------------------------------
+%rdi      %rsi      %rdx     %r10      %r8      %r9
+```
+
+该对应关系也可以从[arch/x86/entry/entry_64.S](https://elixir.bootlin.com/linux/v6.6.8/source/arch/x86/entry/entry_64.S)里找到。
