--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -51,7 +51,9 @@ Hello World!
 
 上面这段代码，是直接从我的一篇文章[使用 GNU 汇编语法编写 Hello World 程序](https://juejin.cn/post/7198135791234465847)拷贝过来的。那篇文章里还提到了使用`int 0x80`软中断和`printf`函数实现输出的方法，有兴趣的可以看下。
 
-补充：如下我们对上面的一些代码做简单解释
+## 3.1 补充说明
+
+如下我们对上面的一些代码做简单解释
 
 1. `len = . - msg`
 
