--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -4,6 +4,8 @@
 
 - [Coder Heart: Linux Kernel源码阅读 x86-64 系统调用（超详细）编](https://juejin.cn/post/7200008514390491195)
 
+- [Linux 0.12内核源码解读](https://www.cnblogs.com/xiaoniuhululu/p/18130983)
+
 > 注：本文是基于Linux内核6.6.8版本
 
 # 1. 系统调用简介
