--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -119,3 +119,71 @@ with the following differences:
 ```
 
 该对应关系也可以从[arch/x86/entry/entry_64.S](https://elixir.bootlin.com/linux/v6.6.8/source/arch/x86/entry/entry_64.S)里找到。
+
+```text
+/*
+ * 64-bit SYSCALL instruction entry. Up to 6 arguments in registers.
+ *
+ * This is the only entry point used for 64-bit system calls.  The
+ * hardware interface is reasonably well designed and the register to
+ * argument mapping Linux uses fits well with the registers that are
+ * available when SYSCALL is used.
+ *
+ * SYSCALL instructions can be found inlined in libc implementations as
+ * well as some other programs and libraries.  There are also a handful
+ * of SYSCALL instructions in the vDSO used, for example, as a
+ * clock_gettimeofday fallback.
+ *
+ * 64-bit SYSCALL saves rip to rcx, clears rflags.RF, then saves rflags to r11,
+ * then loads new ss, cs, and rip from previously programmed MSRs.
+ * rflags gets masked by a value from another MSR (so CLD and CLAC
+ * are not needed). SYSCALL does not save anything on the stack
+ * and does not change rsp.
+ *
+ * Registers on entry:
+ * rax  system call number
+ * rcx  return address
+ * r11  saved rflags (note: r11 is callee-clobbered register in C ABI)
+ * rdi  arg0
+ * rsi  arg1
+ * rdx  arg2
+ * r10  arg3 (needs to be moved to rcx to conform to C ABI)
+ * r8   arg4
+ * r9   arg5
+ * (note: r12-r15, rbp, rbx are callee-preserved in C ABI)
+ *
+ * Only called from user space.
+ *
+ * When user can change pt_regs->foo always force IRET. That is because
+ * it deals with uncanonical addresses better. SYSRET has trouble
+ * with them due to bugs in both AMD and Intel CPUs.
+ */
+```
+
+### 3.1.2 参数数量
+
+系统调用参数限制为6个。
+
+### 3.1.3 参数类型
+
+参数类型限制为`INTEGER`和`MEMORY`。这里的类型是[x86_64 ABI](https://gitlab.com/x86-psABIs/x86-64-ABI)里定义的概念，可以在第3.2.3节 Parameter Passing看到具体的描述：
+
+> **INTEGER**: This class consists of integral types that fit into one of the general purpose
+registers.
+> **MEMORY**: This class consists of types that will be passed and returned in memory via the stack.
+
+
+## 3.2 返回值及错误码
+
+当从系统调用返回时，`%rax`里保存着系统调用结果；如果是-4095至-1之间的值，表示调用过程中发生了错误。
+
+## 3.3 系统调用号
+
+系统调用号通过`%rax`传递。
+
+## 3.4 系统调用指令
+
+系统调用通过`syscall`来执行。
+
+[Intel 64 and IA-32 Architectures Software Developer Manuals](https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html)(以下简称Intel SDM)Volume 2B 第 4.3 节对`syscall`指令的描述如下：
+
