--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -188,3 +188,656 @@ registers.
 
 [Intel 64 and IA-32 Architectures Software Developer Manuals](https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html)(以下简称Intel SDM)Volume 2B 第 4.3 节对`syscall`指令的描述如下：
 
+> SYSCALL invokes an OS system-call handler at privilege level 0. It does so by loading RIP from the IA32_LSTAR
+> MSR (after saving the address of the instruction following SYSCALL into RCX). (The WRMSR instruction ensures
+> that the IA32_LSTAR MSR always contain a canonical address.)
+> 
+> SYSCALL also saves RFLAGS into R11 and then masks RFLAGS using the IA32_FMASK MSR (MSR address
+> C0000084H); specifically, the processor clears in RFLAGS every bit corresponding to a bit that is set in the
+> IA32_FMASK MSR.
+>
+> SYSCALL loads the CS and SS selectors with values derived from bits 47:32 of the IA32_STAR MSR. However, the
+> CS and SS descriptor caches are not loaded from the descriptors (in GDT or LDT) referenced by those selectors.
+> Instead, the descriptor caches are loaded with fixed values. See the Operation section for details. It is the
+> responsibility of OS software to ensure that the descriptors (in GDT or LDT) referenced by those selector values
+> correspond to the fixed values loaded into the descriptor caches; the SYSCALL instruction does not ensure this
+> correspondence.
+
+根据说明，执行`syscall`指令时，会进行以下操作：
+
+- 把`syscall`指令的下一条指令（也就是返回地址）存入`%rcx`寄存器，然后把指令寄存器`%rip`替换成IA32_LSTAR MSR寄存器里的值
+
+- 把RFLAGS标志寄存器的值保存到`%r11`，然后把RFLAGS的值遇IA32_FMASK MSR的值做掩码运算
+
+- 把IA32_STAR MSR寄存器里的第32~47位加载到CS和SS段寄存器
+
+总之，就是先保存现场，然后跳转到IA32_LSTAR(Long system target address register) MSR([Model specific register](https://en.wikipedia.org/wiki/Model-specific_register))寄存器指定的地址上去。
+
+那么这个地址是什么时候存入IA32_LSTAR MSR中去的呢？
+
+# 4. 系统调用初始化
+
+在Linux启动之时，会进行一系列的初始化过程。其中，系统调用的初始化文件[arch/x86/kernel/cpu/common.c](https://elixir.bootlin.com/linux/v6.6.8/source/arch/x86/kernel/cpu/common.c)中：
+
+
+```C
+/* May not be marked __init: used by software suspend */
+void syscall_init(void)
+{
+	wrmsr(MSR_STAR, 0, (__USER32_CS << 16) | __KERNEL_CS);
+	wrmsrl(MSR_LSTAR, (unsigned long)entry_SYSCALL_64);
+
+#ifdef CONFIG_IA32_EMULATION
+	wrmsrl_cstar((unsigned long)entry_SYSCALL_compat);
+	/*
+	 * This only works on Intel CPUs.
+	 * On AMD CPUs these MSRs are 32-bit, CPU truncates MSR_IA32_SYSENTER_EIP.
+	 * This does not cause SYSENTER to jump to the wrong location, because
+	 * AMD doesn't allow SYSENTER in long mode (either 32- or 64-bit).
+	 */
+	wrmsrl_safe(MSR_IA32_SYSENTER_CS, (u64)__KERNEL_CS);
+	wrmsrl_safe(MSR_IA32_SYSENTER_ESP,
+		    (unsigned long)(cpu_entry_stack(smp_processor_id()) + 1));
+	wrmsrl_safe(MSR_IA32_SYSENTER_EIP, (u64)entry_SYSENTER_compat);
+#else
+	wrmsrl_cstar((unsigned long)ignore_sysret);
+	wrmsrl_safe(MSR_IA32_SYSENTER_CS, (u64)GDT_ENTRY_INVALID_SEG);
+	wrmsrl_safe(MSR_IA32_SYSENTER_ESP, 0ULL);
+	wrmsrl_safe(MSR_IA32_SYSENTER_EIP, 0ULL);
+#endif
+
+	/*
+	 * Flags to clear on syscall; clear as much as possible
+	 * to minimize user space-kernel interference.
+	 */
+	wrmsrl(MSR_SYSCALL_MASK,
+	       X86_EFLAGS_CF|X86_EFLAGS_PF|X86_EFLAGS_AF|
+	       X86_EFLAGS_ZF|X86_EFLAGS_SF|X86_EFLAGS_TF|
+	       X86_EFLAGS_IF|X86_EFLAGS_DF|X86_EFLAGS_OF|
+	       X86_EFLAGS_IOPL|X86_EFLAGS_NT|X86_EFLAGS_RF|
+	       X86_EFLAGS_AC|X86_EFLAGS_ID);
+}
+```
+
+
+## 4.1 MSRs寄存器组
+
+在64位模式下，x86 CPU提供了以下几个寄存器来配合系统调用相关指令使用：
+
+1. **IA32_KERNEL_GS_BASE**
+
+    Used by SWAPGS instruction.
+
+1. **IA32_LSTAR**
+
+    Used by SYSCALL instruction.
+
+1. **IA32_FMASK**
+
+    Used by SYSCALL instruction.
+
+1. **IA32_STAR**
+
+    Used by SYSCALL and SYSRET instruction.
+
+这四种MSR寄存器的说明如下，详见[Intel SDM](https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html) Volume 4第2.1节。
+
+```text
+Register Address   Architectural MSR     MSR/Bit Description                      Comment
+                   Name / Bit Fields	
+--------------------------------------------------------------------------------------------------------	
+C000_0081H         IA32_STAR             System Call Target                       If CPUID.80000001:EDX.[29] = 1
+                                         Address (R/W)
+
+C000_0082H         IA32_LSTAR            IA-32e Mode System Call Target           If CPUID.80000001:EDX.[29] = 1
+                                         Address (R/W)
+                                         Target RIP for the called procedure 
+                                         when SYSCALL is executed in 64-bit mode.
+
+C000_0084H         IA32_FMASK            System Call Flag Mask (R/W)              If CPUID.80000001:EDX.[29] = 1
+
+C000_0102H         IA32_KERNEL_GS_BASE   Swap Target of BASE Address of           If CPUID.80000001:EDX.[29] = 1
+                                         GS (R/W)
+```
+
+系统调用初始化时，使用了如下四个宏：
+
+- MSR_STAR
+
+- MSR_LSTAR
+
+- MSR_CSTAR
+
+- MSR_SYSCALL_MASK
+
+它们定义在arch/x86/include/asm/msr-index.h头文件中。可以看到，这三个宏定义的是寄存器地址：
+
+```C
+/* x86-64 specific MSRs */
+#define MSR_EFER		0xc0000080 /* extended feature register */
+#define MSR_STAR		0xc0000081 /* legacy mode SYSCALL target */
+#define MSR_LSTAR		0xc0000082 /* long mode SYSCALL target */
+#define MSR_CSTAR		0xc0000083 /* compat mode SYSCALL target */
+#define MSR_SYSCALL_MASK	0xc0000084 /* EFLAGS mask for syscall */
+#define MSR_FS_BASE		0xc0000100 /* 64bit FS base */
+#define MSR_GS_BASE		0xc0000101 /* 64bit GS base */
+#define MSR_KERNEL_GS_BASE	0xc0000102 /* SwapGS GS shadow */
+#define MSR_TSC_AUX		0xc0000103 /* Auxiliary TSC */
+```
+
+## 4.2 Segment Selector
+
+另外，代码中`__USER32_CS`与`__KERNEL_CS`定义在arch/x86/include/asm/segment.h中：
+
+```C
+/*
+ * Segment selector values corresponding to the above entries:
+ *
+ * Note, selectors also need to have a correct RPL,
+ * expressed with the +3 value for user-space selectors:
+ */
+#define __KERNEL32_CS			(GDT_ENTRY_KERNEL32_CS*8)
+#define __KERNEL_CS			(GDT_ENTRY_KERNEL_CS*8)
+#define __KERNEL_DS			(GDT_ENTRY_KERNEL_DS*8)
+#define __USER32_CS			(GDT_ENTRY_DEFAULT_USER32_CS*8 + 3)
+#define __USER_DS			(GDT_ENTRY_DEFAULT_USER_DS*8 + 3)
+#define __USER_CS			(GDT_ENTRY_DEFAULT_USER_CS*8 + 3)
+#define __CPUNODE_SEG			(GDT_ENTRY_CPUNODE*8 + 3)
+```
+其中`__USER32_CS`为用户态Segment Selector，`__KERNEL_CS`为内核态Segment Selector。`__USER32_CS`宏引用了GDT_ENTRY_DEFAULT_USER32_CS宏，该宏是用户态代码段在GDT（[Global Descriptor Table](https://en.wikipedia.org/wiki/Global_Descriptor_Table)）中的索引。`__KERNEL_CS`引用了GDT_ENTRY_KERNEL_CS宏，该宏是内核态代码段在GDT中的索引。
+
+从上面的代码我们可以看到，内核态Segment Selector等于`GDT索引*8`; 而用户态Segment Selector等于`GDT索引*8+3`，这是由段描述符的结构决定的。在x86架构中，段寄存器和段选择子都是16位的，但是这16位并不是全部用来存储索引值，而是由三部分组成：
+
+- RPL（Requested Privilege Level）位。段选择子最低2位（位0~1）称为请求权限级别位，保存的是段权限级别；因为RPL有2位，可以有0~3四种权限，目前Linux只使用到了0和3这两个级别，其中内核程序运行在0级别，用户程序运行在3级别。
+
+- TI位，即表指示位（Table Indicator Flag）。段选择子的位2是TI位，TI位用来指示段的保存位置：是保存在全局描述符表GDT中，还是在本地描述符表LDT（Local Descriptor Table ）中。当TI位为1时，表示在LDT中，当TI位为0时，表示在GDT中
+
+- 位3~15，才是真正保存索引的位置
+
+从以上分析可知，段描述符最低3位有其他用途不能用来存放索引，所以要把索引值左移3位（相当于乘以8）才能放到索引区。另外，因为用户态的权限级别为3，我们看到所有的用户段都要加3，相当于把用户态的RPL级别硬编码到程序里了。
+
+段选择子的位分布情况见下图，详细信息请查阅[Intel SDM](https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html) Volume 3A：第3.42 Segment Selectors节。
+
+![segment selector](https://raw.githubusercontent.com/ivanzz1001/linux-kernel-learning/master/%E7%B3%BB%E7%BB%9F%E8%B0%83%E7%94%A8/image/linux-syscall-02.awebp)
+
+
+## 4.3 wrmsr指令
+
+根据[Intel SDM](https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html) Volume 2D文档的描述，`wrmsr`指令会把`%edx:%eax`的值写入指定的64位 MSR 寄存器中，具体写入哪个寄存器，是通过`%ecx`指定的。`%edx`的值存入MSR中的高32位，`%eax`的值存入MSR的低32位。在64位系统中，这三个寄存器的高32位会被忽略。
+
+`wrmsrl`宏是对`wrmsr`指令的封装，其参数msr指定了要保存的MSR寄存器，参数val是要保存的内容，其中val的高32位保存到`%edx`，低32位保存到`%eax`。
+
+## 4.4 初始化过程
+
+1. **设置MSR_STAR寄存器**
+
+    ```C
+    wrmsr(MSR_STAR, 0, (__USER32_CS << 16) | __KERNEL_CS);
+    ```
+
+    这行指令把用户代码段选择子（`__USER32_CS`）写入MSR_STAR[16:31]，把内核代码段选择子（`__KERNEL_CS`）写入MSR_STAR[0:15]。
+
+    其中`__KERNEL_CS`是给syscall指令使用的。执行syscall指令时，要从用户态切换到内核态，CPU 会根据`__KERNEL_CS`来更新代码段寄存器`%cs`和栈段寄存器`%ss`，伪代码如下（详细内容请参考 [Intel SDM](https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html)  Vol. 2B 中 syscall指令):
+
+    ```text
+    CS.Selector := IA32_SYSENTER_CS[15:0] AND FFFCH;(* Operating system provides CS; RPL forced to 0 *)
+    
+    SS.Selector := CS.Selector + 8; (* SS just above CS *)
+    ```
+
+    `__USER32_CS`是给sysret指令用的。执行sysret指令时，需要从内核态切换到用户态，cpu会根据`__USER32_CS`来更新`%cs`和`%ss`，伪代码如下（详细内容请参考 Intel SDM Vol. 2B 中 sysret指令）：
+
+    ```text
+    IF operand size is 64-bit (* Operating system provides CS; RPL forced to 3 *)
+
+      THEN CS.Selector := IA32_SYSENTER_CS[15:0] + 32;
+      ELSE CS.Selector := IA32_SYSENTER_CS[15:0] + 16;
+    FI;
+    CS.Selector := CS.Selector OR 3; (* RPL forced to 3 *)
+    SS.Selector := CS.Selector + 8; (* SS just above CS *)
+    ```
+
+1. **设置MSR_LSTAR寄存器**
+
+    ```C
+    wrmsrl(MSR_LSTAR, (unsigned long)entry_SYSCALL_64);
+    ```
+
+    这行代码把`entry_SYSCALL_64`入口地址存入到`MSR_LSTAR`寄存器。syscall指令会把该地址加载到`%rip`寄存器，从该地址开始执行。
+
+
+1. **设置MSR_SYSCALL_MASK寄存器**
+
+    ```C
+    wrmsrl(MSR_SYSCALL_MASK,
+	       X86_EFLAGS_CF|X86_EFLAGS_PF|X86_EFLAGS_AF|
+	       X86_EFLAGS_ZF|X86_EFLAGS_SF|X86_EFLAGS_TF|
+	       X86_EFLAGS_IF|X86_EFLAGS_DF|X86_EFLAGS_OF|
+	       X86_EFLAGS_IOPL|X86_EFLAGS_NT|X86_EFLAGS_RF|
+	       X86_EFLAGS_AC|X86_EFLAGS_ID);
+    ```
+
+    这几行代码定义了`EFLAGS`掩码位，并把他们保存到`MSR_SYSCALL_MASK`寄存器。syscall指令执行时，凡是`MSR_SYSCALL_MASK`置位的标志位，都会从EFLAGS中清除，伪代码如下：
+
+    ```text
+    RFLAGS := RFLAGS AND NOT(IA32_FMASK);
+    ```
+
+    特别说明一下，因为初始化时，掩码中包含中断标志位`X64_EFLAGS_IF`，所以`syscall`指令执行时，中断是禁止的。
+
+
+# 5. 系统调用编号
+
+在示例程序中，我们使用了`write`和`exit`系统调用，并通过`%rax`传递了系统调用号。在Linux中，32位系统和64位系统有不同的系统调用编号。32位系统调用编号定义在[arch/x86/entry/syscalls/syscall_32.tbl](https://elixir.bootlin.com/linux/v6.6.8/source/arch/x86/entry/syscalls/syscall_32.tbl)文件；64位系统调用号定义在[arch/x86/entry/syscalls/syscall_64.tbl](https://elixir.bootlin.com/linux/v6.6.8/source/arch/x86/entry/syscalls/syscall_64.tbl)文件。
+
+下面列出了64位系统的部分系统调用及编号，可以看到`write()`的系统调用编号为1，`exit()`系统调用编号为60：
+
+```C
+#
+# 64-bit system call numbers and entry vectors
+#
+# The format is:
+# <number> <abi> <name> <entry point>
+#
+# The __x64_sys_*() stubs are created on-the-fly for sys_*() system calls
+#
+# The abi is "common", "64" or "x32" for this file.
+#
+0	common	read			sys_read
+1	common	write			sys_write
+2	common	open			sys_open
+3	common	close			sys_close
+4	common	stat			sys_newstat
+5	common	fstat			sys_newfstat
+
+...
+
+60	common	exit			sys_exit
+61	common	wait4			sys_wait4
+62	common	kill			sys_kill
+63	common	uname			sys_newuname
+64	common	semget			sys_semget
+```
+
+# 6. 系统调用表及初始化
+
+Linux内核中包含一个被称为系统调用表的数据结构。64位系统调用表定义在[arch/x86/entry/syscall_64.c](https://elixir.bootlin.com/linux/v6.6.8/source/arch/x86/entry/syscall_64.c)中：
+
+```C
+asmlinkage const sys_call_ptr_t sys_call_table[] = {
+#include <asm/syscalls_64.h>
+};
+```
+
+系统调用表的元素类型为`sys_call_ptr_t`，这是通过typedef定义的函数指针，位于[arch/x86/include/asm/syscall.h](https://elixir.bootlin.com/linux/v6.6.8/source/arch/x86/include/asm/syscall.h#L19)中：
+
+```C
+typedef long (*sys_call_ptr_t)(const struct pt_regs *);
+```
+
+`sys_call_table`用`<asm/syscalls_64.h>`头文件中的内容对数组进行填充。该头文件是使用[scripts/syscalltbl.sh](https://elixir.bootlin.com/linux/v6.6.8/source/scripts/syscalltbl.sh)脚本读取[syscall_64.tbl](https://elixir.bootlin.com/linux/v6.6.8/source/arch/x86/entry/syscalls/syscall_64.tb)后生成的。
+
+
+# 7. 系统调用的定义
+
+下面我们以示例程序中使用的`write()`系统调用为例，来看看系统调用是如何定义的。
+
+write系统调用函数原型如下，可以通过`man 2 write`命令查看：
+
+```C
+ssize_t write(int fd, const void *buf, size_t count);
+```
+
+在Linux内核中，write()系统调用定义在`fs/read_write.c`文件中。由于write()有3个参数，所以用`SYSCALL_DEFINE3`定义的：
+
+```C
+SYSCALL_DEFINE3(write, unsigned int, fd, const char __user *, buf,
+		size_t, count)
+{
+	return ksys_write(fd, buf, count);
+}
+```
+
+`SYSCALL_DEFINE3`宏定义在[include/linux/syscalls.h](https://elixir.bootlin.com/linux/v6.6.8/source/include/linux/syscalls.h)中。可以看到，Linux内核一共定义了7个宏，每个宏后面都有一个数字，表示入参量：
+
+```C
+#ifndef SYSCALL_DEFINE0
+#define SYSCALL_DEFINE0(sname)					\
+	SYSCALL_METADATA(_##sname, 0);				\
+	asmlinkage long sys_##sname(void);			\
+	ALLOW_ERROR_INJECTION(sys_##sname, ERRNO);		\
+	asmlinkage long sys_##sname(void)
+#endif /* SYSCALL_DEFINE0 */
+
+#define SYSCALL_DEFINE1(name, ...) SYSCALL_DEFINEx(1, _##name, __VA_ARGS__)
+#define SYSCALL_DEFINE2(name, ...) SYSCALL_DEFINEx(2, _##name, __VA_ARGS__)
+#define SYSCALL_DEFINE3(name, ...) SYSCALL_DEFINEx(3, _##name, __VA_ARGS__)
+#define SYSCALL_DEFINE4(name, ...) SYSCALL_DEFINEx(4, _##name, __VA_ARGS__)
+#define SYSCALL_DEFINE5(name, ...) SYSCALL_DEFINEx(5, _##name, __VA_ARGS__)
+#define SYSCALL_DEFINE6(name, ...) SYSCALL_DEFINEx(6, _##name, __VA_ARGS__)
+
+#define SYSCALL_DEFINE_MAXARGS	6
+
+#define SYSCALL_DEFINEx(x, sname, ...)				\
+	SYSCALL_METADATA(sname, x, __VA_ARGS__)			\
+	__SYSCALL_DEFINEx(x, sname, __VA_ARGS__)
+```
+
+`SYSCALL_DEFINE3`被扩展成了`SYSCALL_DEFINEx`宏，该宏又扩展成了`SYSCALL_METADATA`和`__SYSCALL_DEFINEx`。
+
+
+下面我们以write()为例，看下扩展过程：
+
+```C
+SYSCALL_DEFINE3(write, unsigned int, fd, const char __user *, buf,
+		size_t, count)
+```
+
+扩展成：
+
+```C
+SYSCALL_DEFINEx(3, _write, unsigned int, fd, const char *, buf, size_t, count)
+```
+
+注意，扩展后，函数名前面多了个下划线"_"。`##`是连接操作符，在宏扩展时，可以把两个符号合并成一个，具体使用见GCC文档[3.5 Concatenation](https://gcc.gnu.org/onlinedocs/cpp/Concatenation.html)。
+
+
+继续扩展：
+
+```C
+SYSCALL_METADATA(_write, 3, unsigned int, fd, const char *, buf, size_t, count)			\
+__SYSCALL_DEFINEx(3, _write, unsigned int, fd, const char *, buf, size_t, count)
+```
+
+`SYSCALL_METADATA`宏的实现，由Kbuild时配置的选项`CONFIG_FTRACE_SYSCALLS`来决定，只有设置`CONFIG_FTRACE_SYSCALLS`选项时，该宏才有意义。从选项名称就能够看出来，它主要是用来对系统调用过程进行追踪的。关于调试和追踪方面的细节，本文暂不涉及，我们主要来看下`__SYSCALL_DEFINEx`宏的实现。
+
+
+## 7.1 __SYSCALL_DEFINEx宏的实现
+
+`__SYSCALL_DEFINEx`宏定义于include/linux/syscalls.h中：
+
+```C
+/*
+ * The asmlinkage stub is aliased to a function named __se_sys_*() which
+ * sign-extends 32-bit ints to longs whenever needed. The actual work is
+ * done within __do_sys_*().
+ */
+#ifndef __SYSCALL_DEFINEx
+#define __SYSCALL_DEFINEx(x, name, ...)					\
+	__diag_push();							\
+	__diag_ignore(GCC, 8, "-Wattribute-alias",			\
+		      "Type aliasing is used to sanitize syscall arguments");\
+	asmlinkage long sys##name(__MAP(x,__SC_DECL,__VA_ARGS__))	\
+		__attribute__((alias(__stringify(__se_sys##name))));	\
+	ALLOW_ERROR_INJECTION(sys##name, ERRNO);			\
+	static inline long __do_sys##name(__MAP(x,__SC_DECL,__VA_ARGS__));\
+	asmlinkage long __se_sys##name(__MAP(x,__SC_LONG,__VA_ARGS__));	\
+	asmlinkage long __se_sys##name(__MAP(x,__SC_LONG,__VA_ARGS__))	\
+	{								\
+		long ret = __do_sys##name(__MAP(x,__SC_CAST,__VA_ARGS__));\
+		__MAP(x,__SC_TEST,__VA_ARGS__);				\
+		__PROTECT(x, ret,__MAP(x,__SC_ARGS,__VA_ARGS__));	\
+		return ret;						\
+	}								\
+	__diag_pop();							\
+	static inline long __do_sys##name(__MAP(x,__SC_DECL,__VA_ARGS__))
+#endif /* __SYSCALL_DEFINEx */
+```
+
+### 7.1.1 _MAP宏
+
+`_MAP`宏定义在include/linux/syscalls.h中：
+
+```C
+/*
+ * __MAP - apply a macro to syscall arguments
+ * __MAP(n, m, t1, a1, t2, a2, ..., tn, an) will expand to
+ *    m(t1, a1), m(t2, a2), ..., m(tn, an)
+ * The first argument must be equal to the amount of type/name
+ * pairs given.  Note that this list of pairs (i.e. the arguments
+ * of __MAP starting at the third one) is in the same format as
+ * for SYSCALL_DEFINE<n>/COMPAT_SYSCALL_DEFINE<n>
+ */
+#define __MAP0(m,...)
+#define __MAP1(m,t,a,...) m(t,a)
+#define __MAP2(m,t,a,...) m(t,a), __MAP1(m,__VA_ARGS__)
+#define __MAP3(m,t,a,...) m(t,a), __MAP2(m,__VA_ARGS__)
+#define __MAP4(m,t,a,...) m(t,a), __MAP3(m,__VA_ARGS__)
+#define __MAP5(m,t,a,...) m(t,a), __MAP4(m,__VA_ARGS__)
+#define __MAP6(m,t,a,...) m(t,a), __MAP5(m,__VA_ARGS__)
+#define __MAP(n,...) __MAP##n(__VA_ARGS__)
+```
+
+其会根据参数数量和映射函数做适当的扩展。其中`n`表示参数数量，`m`代表映射函数，其他参数都是成对出现的，`t`表示参数类型，`a`表示参数值。从注释中也可看到，`__MAP(n, m, t1, a1, t2, a2, ..., tn, an)`会被扩展成`m(t1, a1), m(t2, a2), ..., m(tn, an)`.
+
+### 7.1.2 `__SC_DECL`, `__SC_LONG`, `__SC_CAST`, `__SC_ARGS`宏
+
+这四个宏定义在include/linux/syscalls.h中：
+
+```C
+#define __SC_DECL(t, a)	t a
+#define __TYPE_AS(t, v)	__same_type((__force t)0, v)
+#define __TYPE_IS_L(t)	(__TYPE_AS(t, 0L))
+#define __TYPE_IS_UL(t)	(__TYPE_AS(t, 0UL))
+#define __TYPE_IS_LL(t) (__TYPE_AS(t, 0LL) || __TYPE_AS(t, 0ULL))
+#define __SC_LONG(t, a) __typeof(__builtin_choose_expr(__TYPE_IS_LL(t), 0LL, 0L)) a
+#define __SC_CAST(t, a)	(__force t) a
+#define __SC_ARGS(t, a)	a
+#define __SC_TEST(t, a) (void)BUILD_BUG_ON_ZERO(!__TYPE_IS_LL(t) && sizeof(t) > sizeof(long))
+```
+
+
+这些宏是作为`__MAP`宏的映射函数存在的。这些宏中`t`表示参数类型(type)，`a`表示参数值(argument)。其中`__SC_DECL`、`__SC_CAST`和`__SC_ARGS`这三个宏比较简单，就不做说明了，这里重点说说其他宏。
+
+#### 7.1.2.1 `__SC_LONG`宏
+
+1. **__TYPE_IS_LL宏**
+
+    `__SC_LONG`宏中引用了`__TYPE_IS_LL`，而`__TYPE_IS_LL`又引用了`__same_type`函数。`__same_type`函数定义如下：
+
+    ```C
+    /* Are two types/vars the same type (ignoring qualifiers)? */
+    #ifndef __same_type
+    # define __same_type(a, b) __builtin_types_compatible_p(typeof(a), typeof(b))
+    #endif
+    ```
+    
+    `__same_type`通过[GCC内建函数](https://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html#Other-Builtins) `__builtin_types_compatible_p`来判断2个入参的类型是否一致，如果一致则返回1，否则返回0。`__builtin_types_compatible_p`函数说明如下：
+
+    ```text
+    You can use the built-in function __builtin_types_compatible_p to determine whether
+    two types are the same.
+
+    This built-in function returns 1 if the unqualified versions of the types type1 and 
+    type2 (which are types, not expressions) are compatible, 0 otherwise. The result of 
+    this built-in function can be used in integer constant expressions.
+    ```
+    
+    综上所述，`__TYPE_IS_LL(t)`的作用是判断给定的类型t是否是Long Long或Unsigned Long Long类型，如果是其值为1，否则为0。
+
+
+1. **__builtin_choose_expr**
+
+    `__builtin_choose_expr`也是[GCC内建函数](https://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html#Other-Builtins)，该函数有3个参数，第一个参数是一个常量表达式(const_exp)。其作用类似于三元操作符`?:`，如果第1个参数非0，则返回第2个参数；否则返回第3个参数。
+
+    ```text
+    Built-in Function: type __builtin_choose_expr (const_exp, exp1, exp2)
+
+    You can use the built-in function __builtin_choose_expr to evaluate code depending on the value
+    of a constant expression. This built-in function returns exp1 if const_exp, which is an integer
+    constant expression, is nonzero. Otherwise it returns exp2.
+    ```
+
+1. **结论**
+
+    经过以上分析，宏`__SC_LONG(t, a)`的作用就是把`LL`或`ULL`类型的参数，转换为`LL`类型；其它类型的参数，转换成`L`类型。
+
+### 7.1.3 `__SC_TEST`宏
+
+`__SC_TEST`宏定义如下：
+
+```C
+#define __SC_TEST(t, a) (void)BUILD_BUG_ON_ZERO(!__TYPE_IS_LL(t) && sizeof(t) > sizeof(long))
+```
+
+从宏名称可以看到，宏`__SC_TEST`主要用于测试目的。该宏又引用了BUILD_BUG_ON_ZERO，其定义在tools/include/linux/bug.h中:
+
+```C
+/* Force a compilation error if condition is true, but also produce a
+   result (of value 0 and type size_t), so the expression can be used
+   e.g. in a structure initializer (or where-ever else comma expressions
+   aren't permitted). */
+#define BUILD_BUG_ON_ZERO(e) (sizeof(struct { int:-!!(e); }))
+```
+这是一种使用技巧，它主要用来进行编译时检查。
+
+```C
+sizeof(struct { int:-!!(e); })
+```
+执行流程如下，详见[What is ":-!!" in C code?](https://stackoverflow.com/questions/9229601/what-is-in-c-code)
+
+```text
+(e): Compute expression e.
+
+!!(e): Logically negate twice: 0 if e == 0; otherwise 1.
+
+-!!(e): Numerically negate the expression from step 2: 0 if it was 0; otherwise -1.
+
+struct{int: -!!(0);} --> struct{int: 0;}: If it was zero, then we declare a 
+struct with an anonymous integer bitfield that has width zero. Everything is 
+fine and we proceed as normal.
+
+struct{int: -!!(1);} --> struct{int: -1;}: On the other hand, if it isn't zero, 
+then it will be some negative number. Declaring any bitfield with negative width
+is a compilation error.
+```
+
+综上，`__SC_TEST(t, a)`的作用就是当参数类型`t`不是`LL`类型，但其类型大小却超过`L`类型时，强制编译器报错。说白了就是进行类型检测。
+
+### 7.1.4 `__stringify`宏
+
+该宏定义在tools/include/linux/stringify.h中：
+
+```C
+/* Indirect stringification.  Doing two levels allows the parameter to be a
+ * macro itself.  For example, compile with -DFOO=bar, __stringify(FOO)
+ * converts to "bar".
+ */
+
+#define __stringify_1(x...)	#x
+#define __stringify(x...)	__stringify_1(x)
+```
+
+该宏的作用就是将第一个参数转换成字符串。
+
+### 7.1.5 `__attribute__((alias))`
+
+‌GCC的`__attribute__((alias))`属性用于为一个函数指定多个别名，使得调用这些别名时实际上调用的是同一个函数‌。使用该属性可以方便地进行版本兼容和代码优化。
+
+例如：`void foo() __attribute__((alias("bar")));`使得`foo`为`bar`的一个别名
+
+
+## 7.2 最终扩展
+
+我们继续往下分析，前面我们分析道了如下代码：
+
+```C
+__SYSCALL_DEFINEx(3, _write, unsigned int, fd, const char *, buf, size_t, count)
+```
+
+所以我们知道，在宏内部`x`的值为3，`__VA_ARGS`为参数类型和值列表。
+
+- 根据`_MAP`及`__SC_DECL`宏定义，`__MAP(x,__SC_DECL,__VA_ARGS__)`被扩展成为
+
+  ```C
+  unsigned int fd, const char * buf, size_t count
+  ```
+
+- 根据`__MAP`及`__SC_LONG`宏定义，`__MAP(x,__SC_LONG,__VA_ARGS__)`被扩展成
+
+  ```C
+  long fd, long buf, long count
+  ```
+
+- `__MAP(x,__SC_CAST,__VA_ARGS__)`被扩展成
+
+  ```C
+  (unsigned int) fd, (const char *) buf, (size_t) count
+  ```
+
+- `__MAP(x,__SC_ARGS,__VA_ARGS__)` 被扩展成
+
+  ```C
+  fd, buf, count
+  ```
+
+所以，`__SYSCALL_DEFINEx(3, _write, unsigned int, fd, const char *, buf, size_t, count)`最终被扩展成:
+
+```C
+asmlinkage long sys_write(unsigned int fd, const char * buf, size_t count)__attribute__((alias("__se_sys_write")); \
+ALLOW_ERROR_INJECTION(sys##name, ERRNO); \
+static inline long __do_sys_write(unsigned int fd, const char * buf, size_t count); \
+asmlinkage long __se_sys_write(long fd, long buf, long count); \
+asmlinkage long __se_sys_write(long fd, long buf, long count) \
+{               \
+    long ret = __do_sys_write((unsigned int) fd, (const char *) buf, (size_t) count); \
+    __MAP(x,__SC_TEST,__VA_ARGS__);	   \ #用于测试，不涉及
+    __PROTECT(x, ret, fd, buf, count);	\
+    return ret;                         \
+}            \
+static inline long __do_sys_write(unsigned int fd, const char * buf, size_t count)
+```
+
+再结合write函数具体实现，完整的write系统调用扩展如下：
+
+```C
+asmlinkage long sys_write(unsigned int fd, const char * buf, size_t count)__attribute__((alias("__se_sys_write")); \
+ALLOW_ERROR_INJECTION(sys##name, ERRNO); \
+static inline long __do_sys_write(unsigned int fd, const char * buf, size_t count); \
+asmlinkage long __se_sys_write(long fd, long buf, long count); \
+asmlinkage long __se_sys_write(long fd, long buf, long count) \
+{               \
+    long ret = __do_sys_write((unsigned int) fd, (const char *) buf, (size_t) count); \
+    __MAP(x,__SC_TEST,__VA_ARGS__);	   \ 
+    __PROTECT(x, ret, fd, buf, count);	\
+    return ret;                         \
+}                \
+static inline long __do_sys_write(unsigned int fd, const char * buf, size_t count)
+{
+	return ksys_write(fd, buf, count);
+}
+ssize_t ksys_write(unsigned int fd, const char __user *buf, size_t count)
+{
+	struct fd f = fdget_pos(fd);
+	ssize_t ret = -EBADF;
+
+	if (f.file) {
+		loff_t pos, *ppos = file_ppos(f.file);
+		if (ppos) {
+			pos = *ppos;
+			ppos = &pos;
+		}
+		ret = vfs_write(f.file, buf, count, ppos);
+		if (ret >= 0 && ppos)
+			f.file->f_pos = pos;
+		fdput_pos(f);
+	}
+
+	return ret;
+}
+```
+
+从上面我们看到，write系统调用的真正函数为`__se_sys_write`，然后其内部调用了`__do_sys_write`来实现。
+
+
+## 7.3 总结
+
+下面总结一下实现流程：
+
+- 内部实现函数为`__do_sys_write()`
+
+- `__se_sys_write()`函数对`__do_sys_write()`进行了封装，增加了编译时类型检查和参数保护
+
+- 给`__se_sys_write()`设置了别名`sys_write`
+
+
