--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -344,11 +344,11 @@ C000_0102H         IA32_KERNEL_GS_BASE   Swap Target of BASE Address of         
 #define __USER_CS			(GDT_ENTRY_DEFAULT_USER_CS*8 + 3)
 #define __CPUNODE_SEG			(GDT_ENTRY_CPUNODE*8 + 3)
 ```
-其中`__USER32_CS`为用户态Segment Selector，`__KERNEL_CS`为内核态Segment Selector。`__USER32_CS`宏引用了GDT_ENTRY_DEFAULT_USER32_CS宏，该宏是用户态代码段在GDT（[Global Descriptor Table](https://en.wikipedia.org/wiki/Global_Descriptor_Table)）中的索引。`__KERNEL_CS`引用了GDT_ENTRY_KERNEL_CS宏，该宏是内核态代码段在GDT中的索引。
+其中`__USER32_CS`为用户态Segment Selector，`__KERNEL_CS`为内核态Segment Selector。`__USER32_CS`宏引用了`GDT_ENTRY_DEFAULT_USER32_CS`宏，该宏是用户态代码段在GDT（[Global Descriptor Table](https://en.wikipedia.org/wiki/Global_Descriptor_Table)）中的索引。`__KERNEL_CS`引用了`GDT_ENTRY_KERNEL_CS`宏，该宏是内核态代码段在GDT中的索引。
 
 从上面的代码我们可以看到，内核态Segment Selector等于`GDT索引*8`; 而用户态Segment Selector等于`GDT索引*8+3`，这是由段描述符的结构决定的。在x86架构中，段寄存器和段选择子都是16位的，但是这16位并不是全部用来存储索引值，而是由三部分组成：
 
-- RPL（Requested Privilege Level）位。段选择子最低2位（位0~1）称为请求权限级别位，保存的是段权限级别；因为RPL有2位，可以有0~3四种权限，目前Linux只使用到了0和3这两个级别，其中内核程序运行在0级别，用户程序运行在3级别。
+- RPL（Requested Privilege Level）位。段选择子最低2位（位`0~1`）称为请求权限级别位，保存的是段权限级别；因为RPL有2位，可以有`0~3`四种权限，目前Linux只使用到了0和3这两个级别，其中内核程序运行在0级别，用户程序运行在3级别。
 
 - TI位，即表指示位（Table Indicator Flag）。段选择子的位2是TI位，TI位用来指示段的保存位置：是保存在全局描述符表GDT中，还是在本地描述符表LDT（Local Descriptor Table ）中。当TI位为1时，表示在LDT中，当TI位为0时，表示在GDT中
 
