--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -1090,11 +1090,34 @@ SYM_CODE_END(entry_SYSCALL_64)
 
     这里我们解释下：
 
+    - `SYS_CODE_START`宏定义了一个全局符号，并标明了地址对齐方式及符号的起始地址
+
     - `.balign`: 在GAS(GNU Assembly)中, `.balign`语句用于对齐下一条指令(instruction)或数据(data)到指定的内存边界。更详细信息，请参考[GAS官方文档](https://sourceware.org/binutils/docs/as/index.html))
     
     - `CONFIG_FUNCTION_ALIGNMENT`在x86_64中默认配置值为16，即16字节对齐。
 
 
-1. **SYM_CODE_END**宏
+1. **SYM_CODE_END宏**
    
+    这个宏定义在[include/linux/linkage.h](https://elixir.bootlin.com/linux/v6.6.8/source/include/linux/linkage.h#L309)
 
+    ```C
+    /* SYM_CODE_END -- the end of SYM_CODE_START_LOCAL, SYM_CODE_START, ... */
+    #ifndef SYM_CODE_END
+    #define SYM_CODE_END(name)				\
+	SYM_END(name, SYM_T_NONE)
+    #endif
+
+    /* SYM_END -- use only if you have to */
+    #ifndef SYM_END
+    #define SYM_END(name, sym_type)				\
+	.type name sym_type ASM_NL			\
+	.set .L__sym_size_##name, .-name ASM_NL		\
+	.size name, .L__sym_size_##name
+    #endif
+
+    /* SYM_T_NONE -- type used by assembler to mark entries of unknown type */
+    #ifndef SYM_T_NONE
+    #define SYM_T_NONE				STT_NOTYPE
+    #endif
+    ```
