--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -1083,8 +1083,8 @@ SYM_CODE_END(entry_SYSCALL_64)
     因此，对于`SYM_CODE_START(entry_SYSCALL_64)`展开之后为：
 
     ```C
-    .globl entry_SYSCALL_64;
-    .balign CONFIG_FUNCTION_ALIGNMENT;
+    .globl entry_SYSCALL_64;             \
+    .balign CONFIG_FUNCTION_ALIGNMENT;   \
     entry_SYSCALL_64:
     ```
 
@@ -1121,3 +1121,24 @@ SYM_CODE_END(entry_SYSCALL_64)
     #define SYM_T_NONE				STT_NOTYPE
     #endif
     ```
+
+    在`SYM_CODE_END`中又引用了`SYM_T_NONE`，我们来看看[STT_NOTYPE](https://elixir.bootlin.com/linux/v6.6.8/source/include/uapi/linux/elf.h#L128)的定义:
+
+    ```C
+    #define STT_NOTYPE  0
+    ```
+
+    因此，对于`SYM_CODE_END(entry_SYSCALL_64)`展开之后为:
+
+    ```C
+    .type entry_SYSCALL_64 0 ;                               \
+    .set .L__sym_size_entry_SYSCALL_64, .-entry_SYSCALL_64 ;  \
+    .size entry_SYSCALL_64, .L__sym_size_entry_SYSCALL_64
+    ```
+
+    这里我们解释下:
+
+    - `SST_NOTYPE`: 在Linux内核（以及ELF文件格式）中，`STT_NOTYPE`是符号表中的一个符号类型，表示“无类型”符号，即该符号没有特定的类型。
+  
+    - `.L__sym_size_entry_SYSCALL_64`定义了entry_SYSCALL_64段的长度
+
