--- a/系统调用/x86_64系统调用.md
+++ b/系统调用/x86_64系统调用.md
@@ -1142,3 +1142,24 @@ SYM_CODE_END(entry_SYSCALL_64)
   
     - `.L__sym_size_entry_SYSCALL_64`定义了entry_SYSCALL_64段的长度
 
+1. **SYM_INNER_LABEL宏**
+
+    该宏定义在[inclue/linux/linkage](https://elixir.bootlin.com/linux/v6.6.8/source/include/linux/linkage.h#L206):
+    ```C
+    /* SYM_INNER_LABEL -- only for labels in the middle of code */
+    #ifndef SYM_INNER_LABEL
+    #define SYM_INNER_LABEL(name, linkage)		\
+	    .type name SYM_T_NONE ASM_NL			\
+	    SYM_ENTRY(name, linkage, SYM_A_NONE)
+    #endif
+
+    /* SYM_ENTRY -- use only if you have to for non-paired symbols */
+    #ifndef SYM_ENTRY
+    #define SYM_ENTRY(name, linkage, align...)		\
+	    linkage(name) ASM_NL				\
+	    align ASM_NL					\
+	    name:
+    #endif
+    ```
+
+    从上面可以看到，`SYM_INNER_LABEL`也是定义一个符号，与`SYS_CODE_START`宏类似，只不过没有标明地址对齐方式。
